--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -3,10 +3,9 @@
   "version": "0.0.1",
   "devDependencies": {
     "del": "^1.1.1",
-    "gulp": "^3.8.10",
-    "gulp-6to5": "^2.0.0",
-    "gulp-browserify": "^0.5.0",
-    "gulp-react": "^2.0.0"
+    "gulp": "^3.8.11",
+    "gulp-babel": "^4.0.0",
+    "gulp-browserify": "^0.5.1"
   },
   "dependencies": {}
 }
